// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader default 1`] = `
<div
  aria-busy="true"
  class="Loader-loader-0 Loader-loaderIndeterminate-0"
  data-component-name="Loader"
  role="progressbar"
  style="background-size:40%"
  title="Please wait"
/>
`;

exports[`Loader determinate 1`] = `
<div
  aria-busy="true"
  class="Loader-loader-0 Loader-loaderDeterminate-0"
  data-component-name="Loader"
  role="progressbar"
  style="background-size:0px"
  title="Please wait"
/>
`;

exports[`Loader determinate with progress prop 1`] = `
<div
  aria-busy="true"
  class="Loader-loader-0 Loader-loaderDeterminate-0"
  data-component-name="Loader"
  role="progressbar"
  style="background-size:42%"
  title="Please wait"
/>
`;

exports[`Loader indeterminate 1`] = `
<div
  aria-busy="true"
  class="Loader-loader-0 Loader-loaderIndeterminate-0"
  data-component-name="Loader"
  role="progressbar"
  style="background-size:40%"
  title="Please wait"
/>
`;

exports[`Loader with Custom Class Name 1`] = `
<div
  aria-busy="true"
  class="Loader-loader-0 myTestClass Loader-loaderIndeterminate-0"
  data-component-name="Loader"
  role="progressbar"
  style="background-size:40%"
  title="Please wait"
/>
`;

exports[`Loader with delay 1`] = `null`;
